test/corpus/multilines-strings-2.txt
=======================
Multi-lines Strings (2)
=======================

[runtime]
    [[convert_raw]]
        script = """
            thermorawfileparser
                --format=${format} \
                --input=${input} \
                --output=${output} \
                --metadata=${metadata}
        """
        [[[meta]]]
            title = Convert Raw

---

(workflow_configuration
  (top_section
    name: (nametag)
    (sub_section_1
      name: (nametag)
      (setting
        key: (key)
        operator: (assignment_operator)
        value: (multiline_string
          (string_content)))
      (sub_section_2
        name: (nametag)
        (setting
          key: (key)
          operator: (assignment_operator)
          value: (unquoted_string
            (string_content)
            (string_content)))))))
