test/corpus/settings.txt
========
Settings
========

[runtime]
    end = 100
    script = print('Hello, World!')
    script_file = {{ script_file }}
    script_file = {{ script_file }}.txt
    start = 0
    is_verbose = True
    void =
    veritas = False #comment

---

(workflow_configuration
  (top_section
    name: (nametag)
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (integer))
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (unquoted_string
        (string_content)
        (string_content)))
    (setting
      key: (key)
      operator: (assignment_operator)
      (jinja2_expression))
    (setting
      key: (key)
      operator: (assignment_operator)
      (jinja2_expression)
      value: (unquoted_string
        (string_content)
        (string_content)))
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (integer))
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (boolean))
    (setting
      key: (key)
      operator: (assignment_operator))
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (boolean)
      (comment))))
